# DESKTOPiptv

./: AUDIT-LOG.md  Cargo.toml  DATENSCHUTZ.md  EX-IPTV Desktop.lnk  LICENSE  README.md  index.html  package.json  vite.config.ts
.github/workflows/: iptv.yml  windows-build.yml
ExIptv/: .gitignore  App.xaml  App.xaml.cs  ExIptv.csproj  ExIptv.sln  INSTALLIEREN.bat
ExIptv/.github/workflows/: build.yml
ExIptv/Converters/: BoolToVisibilityConverter.cs  InverseBoolConverter.cs  UrlToImageConverter.cs
ExIptv/ExIptv/: App.xaml  ExIptv.csproj  app.manifest
ExIptv/ExIptv/Models/: AppSettings.cs  Category.cs  ContentType.cs  LiveChannel.cs  Series.cs  VodStream.cs
ExIptv/ExIptv/ViewModels/: MainViewModel.cs  SettingsViewModel.cs  SourceDialogViewModel.cs
ExIptv/ExIptv/Views/: MainWindow.xaml  MainWindow.xaml.cs  SettingsDialog.xaml  SettingsDialog.xaml.cs  SourceDialog.xaml  SourceDialog.xaml.cs
ExIptv/Helpers/: ImageLoader.cs
ExIptv/Models/: PlaylistSource.cs
ExIptv/ViewModels/: MainViewModel.cs  PlayableItem.cs
ExIptv/Views/: MainWindow.xaml  MainWindow.xaml.cs  SourceDialog.xaml  Theme.xaml
ExIptv/installer/: setup.iss
ExIptvDesktop/ExIptvDesktop/: ExIptvDesktop.sln  README.md
ExIptvDesktop_v2/src/: App.xaml  ExIptvDesktop.csproj
core/: Cargo.toml
core/src/: error.rs  lib.rs  models.rs  playback.rs
core/src/db/: migrations.rs  mod.rs
core/src/parser/: m3u.rs
core/src/util/: encoding.rs  mod.rs  sanitize.rs
docs/: ARCHITEKTUR.md  BENUTZERHANDBUCH.md  ENTSCHEIDUNGEN.md  ENTWICKLUNG.md  FEHLERBEHEBUNG.md  PHASENPLAN.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  http.rs  lib.rs  main.rs  secrets.rs  state.rs
src/components/: EmptyState.tsx  Icons.tsx  Sidebar.tsx  sidebar.css
src/i18n/: de.json  en.json  index.ts
src/lib/: backend.ts  types.ts
src/pages/: Home.tsx  LiveTV.tsx  PhasePage.tsx  Providers.tsx  Search.tsx  Settings.tsx
src/styles/: base.css  tokens.css
(+31 files in other folders)
