[package]
name = "exiptv"
version = "0.1.0"
description = "EXIPTV – IPTV-Player für Windows"
edition = "2021"
license = "MIT"
rust-version = "1.77"

# Eigenständig (nicht Teil des Root-Workspaces), damit der Core
# unabhängig von der Tauri-Toolchain getestet werden kann.
[workspace]

[lib]
name = "exiptv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
exiptv-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "cookies", "stream"] }
keyring = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"

[features]
default = []
